# pacific-observatory

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  AIS.html  DEV.md  LICENSE  LICENSE.html  LINT_TASKS.md  Makefile  README.html  README.md  TourUpdates.html  ais_intro.html  ch1_data_quality.html  ch1_intro.html  ch1_lights.html  ch2_lit.html  ch3_dq.html  ch4_econ.html  ch5_other.html  climate_and_ag.html  climate_db.html  debug_solomon_times.py  genindex.html  index.html  objects.inv  palau_display.html  palau_mtsa.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test_solomon_times_config.py  tourism.html  tourism_analysis.html  tourism_eda.html  tourism_intro.html  tourism_mtsa.html  tourism_utsa.html
_sources/: ais_intro.md  ch1_intro.md  ch2_lit.md  ch3_dq.md  ch5_other.md  climate_and_ag.md  climate_db.md  index.md  palau_display.ipynb  palau_mtsa.ipynb  tourism.md
access/: access_intro.html
ais/: Tonga2019.html  ais_emissions.html  ais_fishing.html  ais_hhi.html  ais_intro.html  ais_trade.html
climate/: climate_and_ag.html  climate_db.html
data/: ntl_adm0_pct_cloud.csv  png_nat_accounts.xlsx
docs/: _config.yml  _toc.yml  ais_emissions.md  ais_intro.md  ch1_data_quality.md  ch1_intro.md  ch1_lights.md  ch2_lit.md  ch3_dq.md  ch4_econ.md  climate_and_ag.md  index.md  palau_display.ipynb  references.bib  requirements.txt  tourism.md  tourism_analysis.md  tourism_eda.ipynb  tourism_intro.md
notebooks/: .Rhistory  AIS.ipynb  Annual NTL and GDP.ipynb  Cloud_Analysis.html  Cloud_Analysis.ipynb  FijiClean.ipynb  FoodPriceViz.ipynb  GetAnnualMap.ipynb  Interpolate Lights.ipynb  KernelDensity.ipynb  Mines.ipynb  PriceViz.ipynb  TourUpdates.html  emissions.ipynb
(+1206 files in other folders)
