[project]
name = "pacific-observatory"
version = "0.1.0"
description = "Compiled analytics supporting the World Bank's Pacific Observatory"
authors = [
    {name = "Pacific Observatory"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
text = [
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.0.1,<7.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pip (>=25.2,<26.0)",
    "pycookiecheat (>=0.8.0,<0.9.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]
docs = [
    "docutils (==0.17.1)",
    "jupyter-book (==0.15.1)",
    "jupyter-cache (==0.5.0)"
]
testing = [
    "anyio (>=4.11.0,<5.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=25.5.0,<26.0.0)"
]
